Fixed bug with setup.py for install call.
Cleaned up setup.py.

*****

Hid sphinx requirements in docs (needed only for development).

*****

Bumped bibmanager version to 0.5.3.
This next merge closes #21

*****

Corrected intentation in bib_manager.py to four spaces.

*****

Rewrote string formatting as f-strings.

*****

Rewrote string formatting as f-strings in __init__.py and __main__.py

*****

Minor cleanup in __init__.py.

*****

Rewrote string formatting as f-strings in utils.py

*****

Rewrote string formatting as f-strings in latex_manager.py

*****

Rewrote string formatting as f-strings in config_manager.py

*****

Added try-except clause in cli_config() to avoid throwing traceback
at user.

*****

Bumped bibmanager version to 0.5.4.
This next merge closes #5
(Did my best to throw specific errors in API, and catch them to
avoid throwing tracebacks at user).


*****  Thu Jan 10 13:47:49 CET 2019  *****

Fixed bug in bm.init(), set the right order: create HOME folder,
reset config, reset database.
Removed obsolete None-check for loadfile().
Fixed bug with pygments style (get it on execution rather than during
import).

*****

Added ignored context manager for bm.init() calls in develop/install.

*****

Fixed error message in am.add_bibtex() for invalid ADS token.

*****

Bumped bibmanager version to 0.5.5.


*****  Fr 11. Jan 16:11:43 CET 2019  *****

Changed ROOT (again) to point to location of bibmanager/__init__.py
(Will need to update in utils.py once I set the package structure).
PS: This commit breaks untill I fix setup.py

*****

Updated setup.py to add package_data, automate packages, and comment
out cmdclass (until I get it working).
Moved examples folder into bibmanager folder (so it can be included
during install).

*****

Restored cmdclass in setup.py.  Install works as expected.

*****

Fixed bug in u.repr_author(), missed the f before the f-string.

*****

Added MANIFEST.in file.

*****

Bumped bibmanager version to 0.5.6.

*****
