@@ -789,5 +789,12 @@ Added MANIFEST.in file.
 
 Bumped bibmanager version to 0.5.6.
 
+
+*****  Sat Jan 12 12:15:33 CET 2019  *****
+
+Refactored files and package structure to a standard package format.
+Fixed a few typos here and there.
+Updated docstring examples accordingly.
+
 *****
 
